<resources>
    <string name="app_name">OmniDemo</string>
    <string name="open_camera">Open Camera</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_video">Start Video</string>
    <string name="stop_video">Stop Video</string>
    <string name="start_audio">Record</string>
    <string name="stop_audio">Stop Recording</string>
    <string name="select_file">Select File</string>
    <string name="upload_file">Upload File</string>
    <string name="please_select_file">please select a file</string>
    <string name="start_play_video">Start Play Video</string>
    <string name="start_play_audio">Start Play Audio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
</resources>