<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".traditional.activity.main.MainActivity">

    <Button
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/start_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_audio"
        app:layout_constraintTop_toBottomOf="@id/take_photo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/start_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_video"
        app:layout_constraintTop_toBottomOf="@id/start_audio"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        />
    <Button
        android:id="@+id/start_play_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_play_video"
        app:layout_constraintTop_toBottomOf="@id/start_video"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/start_play_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_play_audio"
        app:layout_constraintTop_toBottomOf="@id/start_play_video"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="15dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>