<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".traditional.activity.video.VideoActivity">

    <EditText
        android:id="@+id/docName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="file name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/select_file"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/upload_file"
        android:hint="@string/please_select_file"
        app:layout_constraintHorizontal_weight="0.8"
        />

    <Button
        android:id="@+id/upload_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_file"
        app:layout_constraintTop_toTopOf="@id/docName"
        app:layout_constraintBottom_toBottomOf="@id/docName"
        app:layout_constraintLeft_toRightOf="@id/docName"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="15dp"
        />

    <Button
        android:id="@+id/select_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_file"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/open_camera"
        />

    <Button
        android:id="@+id/open_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_camera"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/select_file"
        app:layout_constraintRight_toLeftOf="@id/record_video"
        />

    <Button
        android:id="@+id/record_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_video"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/open_camera"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>